# robotic_project_repo

./: .gitignore
Robotic Proje/: algorithm.py
install/: local_setup.sh  setup.sh
install/a2/lib/a2/: a2_referee  waypoint_follower
install/a2/share/a2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/assignment1/lib/assignment1/: a1_answer  a1_referee
install/assignment1/share/assignment1/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/custom_messages_pkg/share/custom_messages_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotic_project/lib/robotic_project/: kudur  kudur2  listener  listener = robotic_project.listener_deneme:maintalker  main_executer  simulation_executer  talker
install/robotic_project/share/robotic_project/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/custom_messages_pkg/: CMakeLists.txt
src/custom_messages_pkg/msg/: SwarmPose.msg
src/robotic_project/: setup.cfg  setup.py
src/robotic_project/msg/: CustomTwist.msg
src/robotic_project/robotic_project/: PIDController.py  hedefler.txt  main_executer.py  simulation_executer.py
src/robotic_project/robotic_project/examples/: fly_original.py
src/robotic_project/robotic_project/results/: save-flight-01.12.2023_19.43.22.npy  save-flight-01.12.2023_21.09.09.npy
(+308 files in other folders)
